Fix donation page layout on iOS

--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -226,3 +226,7 @@ textarea:focus {
 	box-shadow: var(--card-box-shadow);
 	background-color: var(--bg-secondary);
 }
+
+code {
+	word-wrap: break-word;
+}
